src/scss/_purpose.scss
#purposePage {

  margin-top: rem-calc(50px);

  > section {
    @include grid-row();
    margin-bottom: rem-calc(100px);
  }

  .header-alignment {
    @include grid-column($columns:12);
    margin-bottom: rem-calc(20px);
  }

  .belief {

    @include grid-row();
    margin-bottom: rem-calc(40px);

    aside {
      @include grid-column($columns:12);
      margin-bottom: rem-calc(10px);
      position: relative;
      top: 50%;
      transform: translateY(-50%);
    }

    article {
      @include grid-column($columns:12);
      position: relative;
      top: 50%;
      transform: translateY(-50%);
    }

    @media #{$medium-up} {
      margin-bottom: rem-calc(50px);
      max-width: rem-calc(800px);

      aside {
        @include grid-column($columns:4);
      }

      article {
        @include grid-column($columns:8);

      }

      &:nth-of-type(2n) {
        aside {
          @include grid-column($columns:4, $push:8);
        }

        article {
          @include grid-column($columns:8, $pull:4);
        }
      }
    }
  }
}

